Sucursales hardcodeadas en el banco con sus respectivos clientes